--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ git:
 
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'if VERSION >= v"0.7.0-" using Pkg end; cd(Pkg.dir("Example")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
+  - julia -e 'if VERSION >= v"0.7.0-" using Pkg end; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
   # push coverage results to Codecov
-  - julia -e 'if VERSION >= v"0.7.0-" using Pkg end; cd(Pkg.dir("Example")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
+  - julia -e 'if VERSION >= v"0.7.0-" using Pkg end; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
