--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,14 @@
-## Documentation: http://docs.travis-ci.com/user/languages/julia/
+# Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
 os:
   - linux
   - osx
 julia:
-  - 0.6
   - 0.7
-  - 1.0
   - nightly
+matrix:
+  allow_failures:
+    - julia: nightly
+  fast_finish: true
 notifications:
   email: false
-git:
-  depth: 99999999
-
-# # Uncomment the following lines to allow failures on nightly julia
-# # (tests will run but not make your overall status red)
-# matrix:
-#   allow_failures:
-#   - julia: nightly
-
-after_success:
-  # push coverage results to Coveralls
-  - julia -e 'if VERSION >= v"0.7.0-" using Pkg end; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
-  # push coverage results to Codecov
-  - julia -e 'if VERSION >= v"0.7.0-" using Pkg end; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
